'增加下拉刷新'

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             background-color: #efeff4;
         }
         #offCanvasSide .mui-scroll-wrapper,
-        #offCanvasSide .mui-scroll{background: #333;}
+        #offCanvasSide .mui-scroll{background: #FFF;}
         .mui-page.mui-transitioning,
         .mui-off-canvas-wrap .mui-inner-wrap.mui-transitioning{
             -webkit-transition: -webkit-transform 300ms ease;
@@ -232,19 +232,19 @@
                 <a class="mui-control-item" href="#all">全部</a>
             </div>
             <div id="wait-commit" class="mui-control-content mui-active">
-                <div class="mui-content mui-scroll-wrapper">
+                <div class="mui-content mui-scroll-wrapper" id="wait-wrapper">
                     <div class="mui-scroll" id="wait-commit-container">
                         <ul class="mui-table-view mui-table-view-chevron">
-                            <li class="mui-table-view-cell mui-media" data-pid="201512-20101232">
-                                <a class="mui-navigate-right mui-forward" href="#report-detail">
-                                    <img class="mui-media-object mui-pull-left head-img" id="head-img" src="">
-                                    <div class="mui-media-body">
-                                        餐费(已关闭)
-                                        <p class='mui-ellipsis'>￥21.00-1张票据(非发票)</p>
-                                        <p class='mui-ellipsis'>天津开发项目</p>
-                                    </div>
-                                </a>
-                            </li>
+                            <!--<li class="mui-table-view-cell mui-media" data-pid="201512-20101232">-->
+                                <!--<a class="mui-navigate-right mui-forward" href="#report-detail">-->
+                                    <!--<img class="mui-media-object mui-pull-left head-img" id="head-img" src="">-->
+                                    <!--<div class="mui-media-body">-->
+                                        <!--餐费(已关闭)-->
+                                        <!--<p class='mui-ellipsis'>￥21.00-1张票据(非发票)</p>-->
+                                        <!--<p class='mui-ellipsis'>天津开发项目</p>-->
+                                    <!--</div>-->
+                                <!--</a>-->
+                            <!--</li>-->
                         </ul>
                     </div>
                 </div>
